// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The shortest path between a user and a virus (using abstract game data) is correct 1`] = `
Array [
  "user",
  "b",
  "f",
  "g",
  "h",
  "i",
  "virus",
]
`;

exports[`The shortest path between a user and a virus (using coordinates game data) is correct 1`] = `
Array [
  Object {
    "col": 1,
    "row": 1,
  },
  Object {
    "col": 3,
    "row": 1,
  },
  Object {
    "col": 5,
    "row": 3,
  },
  Object {
    "col": 5,
    "row": 5,
  },
  Object {
    "col": 7,
    "row": 5,
  },
  Object {
    "col": 7,
    "row": 7,
  },
  Object {
    "col": 5,
    "row": 7,
  },
]
`;

exports[`When I create a pathfinder without setting a graph using the constructor and I set the graph from a map and I get the node of the user's position (row 0, column 0) and I get the node of the virus' position (row 3, column 1) and I get the shortest path between the user and the virus the result is correct 1`] = `
Array [
  Object {
    "col": 0,
    "row": 0,
  },
  Object {
    "col": 1,
    "row": 0,
  },
  Object {
    "col": 1,
    "row": 1,
  },
  Object {
    "col": 1,
    "row": 2,
  },
  Object {
    "col": 0,
    "row": 2,
  },
  Object {
    "col": 0,
    "row": 3,
  },
  Object {
    "col": 1,
    "row": 3,
  },
]
`;

exports[`When I create a pathfinder without setting a graph using the constructor and I set the graph from a map and I get the node of the user's position (row 0, column 0) and I get the node of the virus' position (row 3, column 1) the node is correct 1`] = `
Object {
  "col": 1,
  "row": 3,
}
`;

exports[`When I create a pathfinder without setting a graph using the constructor and I set the graph from a map and I get the node of the user's position (row 0, column 0) the node is correct 1`] = `
Object {
  "col": 0,
  "row": 0,
}
`;

exports[`When I create a pathfinder without setting a graph using the constructor and I set the graph from a map and I get the shortest path between the user and the virus using their coordinates the result is correct 1`] = `null`;

exports[`When I create a pathfinder without setting a graph using the constructor and I set the graph from a map the graph property of the pathfinder is correct 1`] = `
Map {
  Object {
    "col": 0,
    "row": 0,
  } => Map {
    Object {
      "col": 1,
      "row": 0,
    } => 1,
  },
  Object {
    "col": 1,
    "row": 0,
  } => Map {
    Object {
      "col": 0,
      "row": 0,
    } => 1,
    Object {
      "col": 2,
      "row": 0,
    } => 1,
    Object {
      "col": 1,
      "row": 1,
    } => 1,
  },
  Object {
    "col": 2,
    "row": 0,
  } => Map {
    Object {
      "col": 1,
      "row": 0,
    } => 1,
    Object {
      "col": 3,
      "row": 0,
    } => 1,
  },
  Object {
    "col": 3,
    "row": 0,
  } => Map {
    Object {
      "col": 2,
      "row": 0,
    } => 1,
    Object {
      "col": 3,
      "row": 1,
    } => 1,
  },
  Object {
    "col": 1,
    "row": 1,
  } => Map {
    Object {
      "col": 1,
      "row": 0,
    } => 1,
    Object {
      "col": 1,
      "row": 2,
    } => 1,
  },
  Object {
    "col": 3,
    "row": 1,
  } => Map {
    Object {
      "col": 3,
      "row": 0,
    } => 1,
    Object {
      "col": 3,
      "row": 2,
    } => 1,
  },
  Object {
    "col": 0,
    "row": 2,
  } => Map {
    Object {
      "col": 0,
      "row": 3,
    } => 1,
    Object {
      "col": 1,
      "row": 2,
    } => 1,
  },
  Object {
    "col": 1,
    "row": 2,
  } => Map {
    Object {
      "col": 0,
      "row": 2,
    } => 1,
    Object {
      "col": 1,
      "row": 1,
    } => 1,
    Object {
      "col": 2,
      "row": 2,
    } => 1,
  },
  Object {
    "col": 2,
    "row": 2,
  } => Map {
    Object {
      "col": 1,
      "row": 2,
    } => 1,
    Object {
      "col": 3,
      "row": 2,
    } => 1,
    Object {
      "col": 2,
      "row": 3,
    } => 1,
  },
  Object {
    "col": 3,
    "row": 2,
  } => Map {
    Object {
      "col": 2,
      "row": 2,
    } => 1,
    Object {
      "col": 3,
      "row": 1,
    } => 1,
  },
  Object {
    "col": 0,
    "row": 3,
  } => Map {
    Object {
      "col": 0,
      "row": 2,
    } => 1,
    Object {
      "col": 1,
      "row": 3,
    } => 1,
  },
  Object {
    "col": 1,
    "row": 3,
  } => Map {
    Object {
      "col": 0,
      "row": 3,
    } => 1,
    Object {
      "col": 2,
      "row": 3,
    } => 1,
  },
  Object {
    "col": 2,
    "row": 3,
  } => Map {
    Object {
      "col": 1,
      "row": 3,
    } => 1,
    Object {
      "col": 2,
      "row": 2,
    } => 1,
  },
}
`;

exports[`When I create a pathfinder without setting a graph using the constructor and I set the graph from a map with broken conduits that block the way from user to virus the graph property of the pathfinder is correct 1`] = `
Map {
  Object {
    "col": 0,
    "row": 0,
  } => Map {
    Object {
      "col": 1,
      "row": 0,
    } => 1,
  },
  Object {
    "col": 1,
    "row": 0,
  } => Map {
    Object {
      "col": 0,
      "row": 0,
    } => 1,
  },
  Object {
    "col": 3,
    "row": 0,
  } => Map {
    Object {
      "col": 3,
      "row": 1,
    } => 1,
  },
  Object {
    "col": 3,
    "row": 1,
  } => Map {
    Object {
      "col": 3,
      "row": 0,
    } => 1,
    Object {
      "col": 3,
      "row": 2,
    } => 1,
  },
  Object {
    "col": 0,
    "row": 2,
  } => Map {
    Object {
      "col": 0,
      "row": 3,
    } => 1,
    Object {
      "col": 1,
      "row": 2,
    } => 1,
  },
  Object {
    "col": 1,
    "row": 2,
  } => Map {
    Object {
      "col": 0,
      "row": 2,
    } => 1,
    Object {
      "col": 2,
      "row": 2,
    } => 1,
  },
  Object {
    "col": 2,
    "row": 2,
  } => Map {
    Object {
      "col": 1,
      "row": 2,
    } => 1,
    Object {
      "col": 3,
      "row": 2,
    } => 1,
    Object {
      "col": 2,
      "row": 3,
    } => 1,
  },
  Object {
    "col": 3,
    "row": 2,
  } => Map {
    Object {
      "col": 2,
      "row": 2,
    } => 1,
    Object {
      "col": 3,
      "row": 1,
    } => 1,
  },
  Object {
    "col": 0,
    "row": 3,
  } => Map {
    Object {
      "col": 0,
      "row": 2,
    } => 1,
    Object {
      "col": 1,
      "row": 3,
    } => 1,
  },
  Object {
    "col": 1,
    "row": 3,
  } => Map {
    Object {
      "col": 0,
      "row": 3,
    } => 1,
    Object {
      "col": 2,
      "row": 3,
    } => 1,
  },
  Object {
    "col": 2,
    "row": 3,
  } => Map {
    Object {
      "col": 1,
      "row": 3,
    } => 1,
    Object {
      "col": 2,
      "row": 2,
    } => 1,
  },
}
`;
